<resources>
    <string name="app_name">ToDoList</string>
    <string name="title">Create profile to start your first ToDo List</string>
    <string name="your_name">your name</string>
    <string name="password">Password</string>
    <string name="email_address">Your email address</string>
    <string name="have_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="havenot_account">Don\'t have an account?</string>
    <string name="search">&#160;&#160;Search</string>
    <string name="lists">Lists :</string>
    <string name="create_list">&#160;&#160;Create new list here</string>
    <string name="personal_lists">Personal Lists</string>
    <string name="create_task">&#160;&#160;Create new task here</string>
    <string name="delete">Delete</string>
    <string name="results">Results :</string>
    <string name="next">next</string>
</resources>