<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="74dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text"
        android:lineHeight="28dp"
        android:text="@string/welcome_back"

        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:paddingStart="26dp"
        android:paddingLeft="26dp"
        style="@style/text"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:paddingStart="26dp"
        android:paddingLeft="26dp"
        style="@style/text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_pass"
        android:textColor="#FFF"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/montserrat"
        android:padding="13dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />
    <TextView
        android:id="@+id/havenot_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/havenot_account"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_profile"
        android:textFontWeight="700"
        android:textColor="#FFF"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="@+id/havenot_account"
        app:layout_constraintStart_toStartOf="@+id/havenot_account"
        app:layout_constraintTop_toBottomOf="@+id/havenot_account" />


</androidx.constraintlayout.widget.ConstraintLayout>