<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="109dp" />


    <TextView
        android:id="@+id/title"
        style="@style/text"
        android:layout_width="227dp"
        android:layout_height="102dp"
        android:gravity="center_horizontal"
        android:lineHeight="34dp"
        android:lineSpacingExtra="5sp"
        android:text="@string/title"
        android:textFontWeight="400"
        android:minLines="3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:paddingStart="26dp"
        android:paddingLeft="26dp"
        style="@style/text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bg"
        style="@style/text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:paddingStart="26dp"
        android:paddingLeft="26dp"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:paddingStart="26dp"
        android:paddingLeft="26dp"
        style="@style/text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="39dp"
        android:background="@drawable/button_bg"
        android:padding="13dp"
        android:text="@string/create_your_profile"
        android:textAllCaps="false"
        style="@style/text"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat"
        android:text="@string/have_account"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/text"
        android:text="@string/log_in"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_account" />


</androidx.constraintlayout.widget.ConstraintLayout>